# zaton

./: .gitignore  CMakeLists.txt  Camera.h  Sphere.h  main.cpp
data/: env.lvl  env2.lvl  env2.lvla  environment.lvl  gun.geom  gun.h  lampSphere.h  level2.h  mesh.geom  mesh.lvl  planeBump.h  sci-fi_crate.h
data/shaders/: aabb_fragment.glsl  aabb_vertex.glsl  basic_fragment.glsl  basic_vertex.glsl  ui_fragment.glsl  ui_vertex.glsl
data/shaders/bloom/: bloom_fragment.glsl  blur_fragment.glsl  blur_vertex.glsl  tonemap_fragment.glsl  tonemap_vertex.glsl
data/shaders/line/: line_fragment.glsl  line_vertex.glsl
data/shaders/mm_bloom/: blur_fragment.glsl  final_pass_fragment.glsl  first_pass_fragment.glsl  first_pass_vertex.glsl  lamp_fragment.glsl  lamp_vertex.glsl  pinPong_fragment.glsl  pinPong_vertex.glsl  second_pass_fragment.glsl  xBlur_fragment.glsl  yBlur_fragment.glsl
data/shaders/particle/: flat_frag.glsl  flat_vert.glsl  particle_frag.glsl  particle_vert.glsl
data/shaders/particles/: point_fragment.glsl  point_vertex.glsl
data/shaders/particles/fountain/: fountain_fragment.glsl  fountain_vertex.glsl
data/terrains/: adjTerrain.raw  mainTerrain.raw
data/textures/: cross.tga
data/textures/cube/grace-diffuse/: README
src/core/: Application.h  Game.cpp  Game.h  LinuxMain.cpp  Platform.h  Startup.cpp  Timer.cpp  Timer.h  WinMain.cpp  info.txt
src/game/: Actor.cpp  Actor.h  BasePlayer.h  Camera.cpp  Camera.h  Component.cpp  Component.h  Entity.cpp  Entity.h  MeshComponent.cpp  MeshComponent.h  Player.cpp  Player.h  Spider.cpp  Spider.h  Terrain.cpp  Terrain.h  Weapon.cpp  Weapon.h  objects.h
src/game/particle/: fireRing.cpp  fireRing.h  fountain.cpp  fountain.h  fountainEmitter.cpp  fountainEmitter.h  particle.h  particleEmitter.cpp  particleEmitter.h
src/game/sky/: SkyPlane.cpp  SkyPlane.h
src/graphics/: Context.h  DrawDebug.cpp  DrawDebug.h  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h  info.txt
src/graphics/data/: Mesh.cpp  Mesh.h  vbocube.h  vertex.h
src/graphics/opengl/: OpenGLExtensions.cpp  OpenGLExtensions.h  OpenGLRenderer.cpp  OpenGLRenderer.h
src/gui/: UI.cpp  UI.h
src/input/: Input.cpp  Input.h  Keyboard.h  Mouse.h
src/math/: constant.h  random.h
src/physics/: Collision.cpp  Collision.h
src/scene/: Cube.cpp  Cube.h  LoadLevel.cpp  LoadLevel.h  level2.h  scene.h  simpGun.h
src/util/: Stream.cpp  Stream.h  blender_export.py  utils.cpp  utils.h
src/window/: Window.h
